--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# ignores any file named "secret.txt"
+# ignores any file named "secret.js"
 secret.js
 # ignores any directory named "secrets"
 logs/
@@ -7,7 +7,7 @@ logs/
 # ignores a directory called "node_modules" located at the root of your working directory
 /node_modules/
 # ignores any file with a .png extension
-*.png
+*.txt
 # ignores any file or directory that begins in "cache", such as cache-file-01, cached_assets/, etc.
 cache*
 # ignores any file or directory that ends in "data", such as project_data/, big_file_of_data
